# cib_quasar

./: .gitignore  .gitmodules  ProjectSettings.cmake  README.md
CIBproto/: CMakeLists.txt
CIBproto/include/: cib.hh  cib.proto  timer.hh
CIBproto/src/: cib.cpp
Design/: Design.xml
Device/: DeviceCustom.cmake
Device/include/: DIOLMotor.h  DIoLAttenuator.h  DIoLCIB.h  DIoLLaserUnit.h  DIoLMotor.h  DIoLPiezoController.h  DIoLPowerMeter.h  DIoLShutter.h  DIoLaserSystem.h  cib_registers.h
Device/src/: DIOLMotor.cpp  DIoLAttenuator.cpp  DIoLCIB.cpp  DIoLLaserUnit.cpp  DIoLMotor.cpp  DIoLPiezoController.cpp  DIoLPowerMeter.cpp  DIoLShutter.cpp  DIoLaserSystem.cpp
Extra/: a1_config.json  cib_sc_client  cib_sc_server.uap  cib_sc_server_p1.uap  cib_sc_server_p2.uap  config_p2.xml  config_power_meter.json  iols_config.json  iols_p1_config.json  l1_config.json  m1_config.json
Extra/client/: .gitignore  CMakeLists.txt  FeedbackManager.cpp  FeedbackManager.h  IoLSMonitor.cpp  IoLSMonitor.h  Open62541Client.cpp  Open62541Client.h  cib_sc_browse_nodes.cpp  cib_sc_client.cpp  cib_sc_client_system.cpp  cib_sc_client_v2.cpp  compile.sh  compile.sh.iols  iols_base_example.cpp  iols_client_functions.cpp  iols_client_functions.h  iols_manager.cpp  iols_manager.h  iols_manager_commands.cpp  iols_manager_old.cpp  iols_p2_config.json  m1_config.json  open62541.c  open62541.h  toolbox.cpp  toolbox.h
Extra/client/ncurses/: example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example4.h
Extra/client/standalone_clients/: CMakeLists.txt  compile.sh  open62541.c  open62541.h
Extra/configs/: a1_config.json  iols_config.json  iols_p1_config.json  iols_p1_config_pin.json  iols_p2_config.json  iols_p2_config_pin.json  l1_config.json  l2_config.json  m1_config.json
Extra/server_config/: config_p2.xml
Extra/systemd/: README.md  cib_quasar.service
FrameworkInternals/: .gitignore  automated_build.py  build_config_selector.cmake  commandMap.py  externalToolCheck.py
FrameworkInternals/EnabledModules/: open62541-compat.tag  open62541-compat.url
LogIt/src/: LogRecord.cpp
Server/: CMakeLists.txt
Server/include/: AccessControl.h  opcserver_open62541.h
Server/src/: AccessControl.cpp  BaseQuasarServer.cpp  QuasarServer.cpp  opcserver_open62541.cpp
Test/: CMakeLists.txt  test_json_structure.cpp  test_sizes.cpp  test_structures.cpp  test_system_load.cpp
